Revert "Remove /admin/preferences endpoint"
This reverts commit b38176a3789e783dba8709cfd1a841853bc2b091.
