# src/routes/admin/default_margin.ts
@@ -1,7 +1,6 @@
 import express from 'express';
 import { getPreference, preferences, setPreference } from '../../db/preferences.js';
-import logger from '../../logger.js';
-import authMiddleware, { type Authenticated_request } from '../authMiddleware.js';
+import authMiddleware from '../authMiddleware.js';
 
 const { GLOBAL_DEFAULT_MARGIN } = preferences;
 
@@ -14,9 +13,8 @@ router.get('/', async (_req, res) => {
 	res.status(200).json({ margin });
 });
 
-router.patch('/', async (req: Authenticated_request, res) => {
-	const result = await setPreference(GLOBAL_DEFAULT_MARGIN, req.body.margin);
-	logger.info("User %s changed margin from '%s' to '%s'", req.user.username, result.previousValue, result.value);
+router.patch('/', async (req, res) => {
+	await setPreference(GLOBAL_DEFAULT_MARGIN, req.body.margin);
 	res.status(200).send();
 });
 
